summative.moria.Moria.scala.error
Erreur de compilation :
Moria:14: error: not found: value farward
  farward()
  ^Moria:15: error: not found: value farward
  farward()
  ^