summative.moria.Moria.scala.code
back()
do {
  while (!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
  back()
  while (!estSurBiscuit()){
    avance()
  }
  backward()
  poseBiscuit()
  back()
  farward()
  farward()
  
  
  
  
  
  
  
  
  
  
} while (!estFaceMur())
droite()
avance()
gauche()
avance()
avance()